[gd_scene load_steps=6 format=3 uid="uid://bfpsmggml3nme"]

[ext_resource type="Texture2D" uid="uid://b4txgp6wh6bjw" path="res://icon.svg" id="1_3i4q2"]
[ext_resource type="Script" path="res://world/scripts/enemies.gd" id="1_1044u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18ooh"]
size = Vector2(54, 55)

[sub_resource type="CircleShape2D" id="CircleShape2D_5upwr"]
radius = 294.061

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u804g"]
size = Vector2(56, 56)

[node name="Enemy" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_1044u")

[node name="hitbox" type="Area2D" parent="CharacterBody2D"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/hitbox"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_18ooh")
debug_color = Color(0.984314, 0, 0.333333, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-3.8147e-06, -1)
scale = Vector2(0.429688, 0.429688)
texture = ExtResource("1_3i4q2")

[node name="detection" type="Area2D" parent="CharacterBody2D"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/detection"]
shape = SubResource("CircleShape2D_5upwr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_u804g")
debug_color = Color(0.682353, 0.686275, 0, 0.419608)

[connection signal="area_entered" from="CharacterBody2D/hitbox" to="CharacterBody2D" method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="CharacterBody2D/detection" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/detection" to="CharacterBody2D" method="_on_area_2d_body_exited"]
